--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -7,6 +7,18 @@
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
 
+    --gray-50: 210 40% 98%;
+    --gray-100: 210 40% 96.1%;
+    --gray-200: 214.3 31.8% 91.4%;
+    --gray-300: 212.7 26.8% 83.9%;
+    --gray-400: 215 20.2% 65.1%;
+    --gray-500: 215.4 16.3% 46.9%;
+    --gray-600: 215.3 19.3% 34.5%;
+    --gray-700: 215.3 25% 26.7%;
+    --gray-800: 217.2 32.6% 17.5%;
+    --gray-900: 222.2 47.4% 11.2%;
+    --gray-950: 222.2 84% 4.9%;
+
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
 
